--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,10 @@ flask-cors = "*"
 python-dotenv = "*"
 
 [dev-packages]
+black = "*"
+flake8 = "*"
+isort = "*"
+mypy = "*"
 
 [requires]
 python_version = "3.10"
